# GammaIndex

./: .gitlab-ci.yml  CMakeLists.txt
Gamma/: CMakeLists.txt  Gamma.py
Gamma/Resources/UI/: Gamma.ui
